--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "wedding-website",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://wallflower6.github.io/lindy-andrea",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "i18next": "^25.7.4",
@@ -24,6 +27,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "vite": "^7.2.4"
   }
